--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ attrs==17.3.0
 click==6.7
 colorama==0.3.9
 dominate==2.3.1
-Flask==0.12.2
+Flask>0.12.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.0
 Flask-Migrate==2.1.1
